compiler/tests/compile-error/macro-errors.arret
(import [arret internal primitives])

(defmacro 1 (macro-rules))
         ;^ ERROR expected symbol, found integer

(defmacro a b) ;~ ERROR expected macro specification list, found symbol

(defmacro a ())
           ;^^ ERROR missing macro type

(defmacro a (macro-fn))
            ;^^^^^^^^ ERROR unsupported macro type

(defmacro a (macro-rules
  [(...) false]
   ;^^^ ERROR unexpected ellipsis in macro rule
))

(defmacro a (macro-rules
  [(1) (... 1)]
           ;^ ERROR expected macro symbol to escape, found integer
))

(defmacro no-rules (macro-rules))
(no-rules) ;~ ERROR no matching macro rule

(defmacro _ (macro-rules 1))
                        ;^ ERROR expected macro rule vector, found integer

(defmacro no-template-datum (macro-rules
  [()]
 ;^^^^ ERROR expected macro rule vector with 2 elements, found 1
))

(defmacro more-than-one-template-datum (macro-rules
  [() 1 2]
 ;^^^^^^^^ ERROR expected macro rule vector with 2 elements, found 3
))

(defmacro non-list-pattern (macro-rules
  [self 1]
  ;^^^^ ERROR expected macro rule pattern list
))

(defmacro m (macro-rules
  [((list1 ...) (list2 ...)) ([list1 list2] ...)]
                            ;^^^^^^^^^^^^^^^^^^^ ERROR subtemplate references macro variables from multiple subpatterns
))

(defmacro m (macro-rules
  [(expr ...) (5 ...)]
             ;^^^^^^^ ERROR subtemplate does not include any macro variables
))

(defmacro vm (macro-rules [((l ... r ...)) true]))
                                  ;^ ERROR multiple zero or more matches in the same sequence

(defmacro a (macro-rules [(x x) x]))
                            ;^ ERROR duplicate definition

(defmacro return-one (macro-rules [() 1]))
(return-one extra-arg) ;~ ERROR no matching macro rule

; Keyword doesn't match
(defmacro for (macro-rules [(x :in y) [x y]]))
(for 1 :for 2) ;~ ERROR no matching macro rule

(defmacro two-set? (macro-rules
  [(#{_ _}) false]
   ;^^^^^^ ERROR set patterns must either be empty or a zero or more match
))
